# bread

./: .gitignore  LICENSE  README.md  bread.cabal  stack.yaml
doc/examples/: ciabatta.yml
src/: BreadData.hs  BreadUtils.hs  Cli.hs  Main.hs  Rendering.hs  Scaling.hs
