name:                bread
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ramanshah/bread#readme
license:             BSD3
license-file:        LICENSE
author:              Raman A. Shah
maintainer:          raman.anand.shah@gmail.com
copyright:           2017 Raman A. Shah
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bread
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       BreadData
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , yaml
                     , text
